2007-10-03 Paul Lindner <lindner@inuus.com>
	* Incorporate "cas" operation developed by Dustin
	  Sallings <dustin@spy.net> This change allows you
	  to do atomic changes to an existing key.

	* Fix for stats.evictions not incrementing
	  when exptime == 0 items are kicked off the cache. 
	  from Jean-Francois BUSTARRET <jfbustarret@wat.tv>.

	* Fix for do_item_cachedump() which was returning
	  an incorrect timestamp.
	
	* Switch to unsigned 64-bit increment/decrement counters
	  from Evan Miller and Dustin Sallings.

	* Add append command support written by Filipe Laborde.
	  Thread safe version plus prepend command from Maxim Dounin
	  <mdounin@mdounin.ru>

	* The memcached-tool script can now display stats.  Patch
	  provided by Dan Christian <dchristian@google.com>

	* Fix for Unix Domain sockets on FreeBSD
	  FreeBSD's sendmsg() requires msg_name in msghdr structure 
	  to be NULL if not used, setting msg_namelen to 0 isn't enough.
	  Patch from Maxim Dounin <mdounin@mdounin.ru>

2007-08-21 Paul Lindner <lindner@inuus.com>
	* Incorporate incrememnt patch from Evan Miller 
	  <emiller@imvu.com> to define increment overflow
	  behavior.

2007-08-07 Leon Brocard <acme@astray.com>
	* Bring the memcached.1 manpage up to date

2007-08-06 Paul Lindner <lindner@inuus.com>
	* Fix crash when using -P and -d flags on x86_64
	  with latest libevent release.

2007-07-08  Steven Grimm  <sgrimm@facebook.com>

	* Item stats commands weren't thread-safe; wrap them with locks
	  when compiled in multithreaded mode.
	* The "stats items" command now works again; it broke with the
	  introduction of the powers-of-N chunk size change.

2007-07-06 [Version 1.2.3 released]

2007-06-19  Paul Lindner  <lindner@mirth.inuus.com>

	* Solaris portability fixes from Trond Norbye

2007-05-29  Paul Lindner  <lindner@mirth.inuus.com>

	* Properly document evictions statistic value

2007-05-10  Paul Lindner  <lindner@inuus.com>

	* Flesh out tests for unix domain sockets and binary data.